src/Homepage.css
.Homepage {
  /* put around the vertical center of page */
  min-height: calc(100vh - 70px);
  display: flex;
  align-items: center;
  color: var(--white-color);
  background-image: url(https://a0.muscache.com/im/pictures/287ee9eb-73f1-437f-b861-8decac866c2e.jpg?im_w=1200);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.Homepage-title {
  font-size: 76px;
  font-weight: 700;
  text-shadow: 2px 2px 5px rgb(52, 48, 47);
}

.Homepage-name {
  color: var(--primary-color);
  font-size: 42px;
  text-shadow: 2px 2px 5px rgb(52, 48, 47);
}

.Homepage-message {
  font-size: 18px;
}

.btn-start {
  font-size: 20px;
  text-decoration: none;
  color: var(--white-color);
  border-radius: 15px;
  border: 1px solid var(--white-color);
}

.btn-start:hover {
  color: var(--white-color);
  background-color: var(--primary-color);
  opacity: 0.9;
}

/* Fade-in effect */

.fade-in {
  animation: fadeIn ease 2s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* Fade-in effect - btn */

.fade-in-btn {
  animation: fadeIn ease 8s;
  -webkit-animation: fadeIn ease 8s;
  -moz-animation: fadeIn ease 8s;
  -o-animation: fadeIn ease 8s;
  -ms-animation: fadeIn ease 8s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@media (max-width: 767px) {
  .Homepage {
    min-height: calc(100vh - 59px);
  }
  .Homepage-title {
    margin-top: 50px;
    font-size: 64px;
  }
  .Homepage-name {
    font-size: 36px;
  }
  .Homepage-message {
    font-size: 18px;
  }
  .btn-start {
    font-size: 16px;
  }
}

